--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_subdirectory(thirdparty)
 
+project(Ember)
 add_subdirectory(Ember)
 
 add_subdirectory(Editor)
